2007-01-13  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix Emacs modeline. Tab is 8 characters.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix indentation of *.h files. Running indent on them was not a good
	idea. Also add sts setting to vim modeline.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Indentation fix, using: indent -kr -nut -pcs -psl -i4 -l100

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Add support for porterduff comp-op operators and for enable-background.

	* rsvg-cairo-draw.c (_rsvg_cairo_set_operator): new.
	(rsvg_cairo_render_path): request a temporary buffer when operator is
	not src-over.
	(rsvg_cairo_render_image): set composite operator before painting.
	(rsvg_cairo_push_render_stack): don't exit for operator != src-over
	or enable-background != accumulate.
	(rsvg_cairo_pop_render_stack): ditto. Set composite operator.
	* rsvg-styles.c (rsvg_state_init): added comp_op and
	enable_background.
	(rsvg_state_inherit_run): force inherit for comp_op and
	enable_background.
	(rsvg_parse_style_arg): parse for comp_op and enable_background.
	
	* rsvg-structure.c (rsvg_node_symbol_set_atts): move
	rsvg_parse_style_attrs inside the conditionnal block.
	
2007-01-05  Christian Persch  <chpe@svn.gnome.org>

	* gtk-engine/svg-draw.c: (rsvg_style_register_type):
	* gtk-engine/svg-rc-style.c: (rsvg_rc_style_register_type):
	* rsvg-gobject.c: Bug #393297: no need to make GTypeInfo static.

2006-11-10  Dom Lachowicz <domlachowicz@gmail.com>

	* rsvg-css.c: Handle absolute font sizes [ xx-small | x-small | small | medium | large | x-large | xx-large ]
	
2006-11-09  Tor Lillqvist  <tml@novell.com>

	* librsvg-zip.in: DLLs are always in "bin" nowadays, no need to
	ponder that in the script. Use pkg-config to find out
	gtk_binary_version to use it in the pathnames to the engine and
	loader DLLs.

2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>

	* configure.in: 2.16.1
