@@ -1,3 +1,8 @@
+2007-01-25  Kouhei Sutou <kou@cozmixng.org>
+
+	* rsvg-cairo-clip.c: Fix clipping regression introduced by the 
+	2006-10-13 patch (bug 388545)
+	
 2007-01-13  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>
 
 	Fix Emacs modeline. Tab is 8 characters.
